# mnist_neural_network

./: .gitignore  Cargo.toml
src/: main.rs  mnist.rs  utils.rs
src/networks/: mod.rs  network1.rs  network2.rs  specific_per_image.rs  unspecific_per_image.rs
