[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ndarray = { version = "0.15.6" }
ndarray-rand = "0.14.0"
rand = { version = "0.8.5", features = [] }
flate2 = { version = "1.0.28", features = [] }
byteorder = "1.5.0"