[package]
name = "mnist_neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
ndarray-rand = "0.14.0"
blas-src = { version = "0.9.0", features = ["intel-mkl"] }
rand = { version = "0.8.5", features = [] }
flate2 = { version = "1.0.28", features = [] }
byteorder = "1.5.0"
clap = { version = "4.4.7", features = ["derive"]}
rayon = "1.8.0"